[refactor/DB-134]: 산책로 API 좌표 위도, 경도 순으로 수정 (#36)
* refactor(DB-134): API 위도, 경도 순으로 수정
* refactor: 소나 수정