@@ -2,11 +2,11 @@ package com.dongsan.domains.walkway.dto.response;
 
 import static com.dongsan.domains.walkway.mapper.LineStringMapper.toList;
 
+import com.dongsan.domains.walkway.dto.WalkwayCoordinate;
 import com.dongsan.domains.walkway.entity.Walkway;
 import com.dongsan.domains.walkway.enums.ExposeLevel;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record GetWalkwayWithLikedResponse(
         String date,
@@ -19,7 +19,7 @@ public record GetWalkwayWithLikedResponse(
         Integer reviewCount,
         List<String> hashtags,
         ExposeLevel accessLevel,
-        List<List<Double>> course
+        List<WalkwayCoordinate> course
 ) {
     public GetWalkwayWithLikedResponse(Walkway walkway) {
         this (
@@ -33,7 +33,7 @@ public record GetWalkwayWithLikedResponse(
                 walkway.getReviewCount(),
                 walkway.getHashtagWalkways().stream()
                         .map(hashtagWalkway -> "#" + hashtagWalkway.getHashtag().getName())
-                        .collect(Collectors.toList()),
+                        .toList(),
                 walkway.getExposeLevel(),
                 toList(walkway.getCourse())
         );
